--- a/src/Services/Serveur/Serveur.API/Properties/launchSettings.json
+++ b/src/Services/Serveur/Serveur.API/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "Serveur.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "api/serveurs",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
