--- a/src/Services/Serveur/Serveur.API/Serveur.API.csproj
+++ b/src/Services/Serveur/Serveur.API/Serveur.API.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,11 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Serveur.Domain\Serveur.Domain.csproj" />
-    <ProjectReference Include="..\Serveur.Infrastructure\Serveur.Infrastructure.csproj" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0" />
   </ItemGroup>
 
 </Project>
