--- a/src/Services/Inventaire/Inventaire.Domain/Inventaire.Domain.csproj
+++ b/src/Services/Inventaire/Inventaire.Domain/Inventaire.Domain.csproj
@@ -1,7 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0" />
+  </ItemGroup>
 
 </Project>
