--- a/src/Services/Inventaire/Inventaire.Infrastructure/Inventaire.Infrastructure.csproj
+++ b/src/Services/Inventaire/Inventaire.Infrastructure/Inventaire.Infrastructure.csproj
@@ -8,4 +8,11 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0" />
+  </ItemGroup>
+
 </Project>
